Fix responsive container spacing.

--- a/style.css
+++ b/style.css
@@ -145,11 +145,11 @@ select {
 /* -- Navigation -- */
 
 .wp-block-navigation__responsive-container.is-menu-open {
-	padding: var(--wp--custom--spacing--gap);
+	padding: var(--wp--preset--spacing--40);
 }
 
 .wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__responsive-container-content {
-	padding-top: var(--wp--custom--spacing--gap);
+	padding-top: var(--wp--preset--spacing--40);
 }
 
 .wp-block-navigation__responsive-container-close,
